# gha-runner-ctl

./: .cz.toml  .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml  close-issues-on-main.yml  fleet-ci.yml  fleet-security.yml  release-on-merge.yml  release.yml  reopen-issues-closed-off-main.yml
docs/: CONSUMERS.md  DESIGN.md  DYNAMIC_POOL.md  FLEET_STANDARDS.md  HONEST_CI.md  HOST_OPS.md  HOST_PLATFORMS.md  ORCHESTRATION.md  PORTING_TO_MYCELIUM.md  QUICKSTART.md  RECOVERY.md  RELEASE.md  SECURITY.md  WORK_IMAGES.md
docs/assets/: README.md  setup-status.txt
docs/interfaces/: BULLETIN_GRAPH.md  ctl-cli-env.md  ctl-host-instance.md  ctl-reg-api-budget.md  ctl-security-identity.md
docs/troubleshoot/: FLEET_QUEUE_STALL_2026-07-22.md
docs/troubleshoot/captures/gha-fleet-debug-20260722T031027Z/: 00-identity.txt  01-systemd.txt  02-config.txt  02-prefer-repos.list  03-process.txt  04-pool-rr-state.txt  05-containers.txt  06-github-queues.tsv  07-mycelium-lang-detail.txt  08-runners-online.jsonl  09-logs.txt  10-rate-limit.txt  ANALYSIS.md  INDEX.md
mycelium-port/: README.md  gha_pool.myc  mycelium-proj.toml
packaging/: Containerfile  Containerfile.agent  entrypoint.sh  image-map.example.json  image-map.example.toml  install-ctl.sh
scripts/: auto-listen.sh  build-agent-image.sh  dist.sh  run-agent-micro.sh  security-scan.sh  setup-rootless.sh  verify-rootless.sh
scripts/lib/: shell-debug.sh
src/: image_arch.rs  lib.rs  main.rs  pool.rs
tests/: integration_tests.rs  tests.rs
