[package]
name = "gha_runner_ctl"
version = "0.2.8"
edition = "2021"
rust-version = "1.96"
license = "MIT"
description = "One Podman-backed GitHub Actions self-hosted runner: snapshot, auto-register, on-demand up/down"
repository = "https://github.com/tzervas/gha-runner-ctl"
readme = "README.md"
keywords = ["github-actions", "self-hosted", "podman", "runner"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[lib]
name = "gha_runner_ctl"
path = "src/lib.rs"

[[bin]]
name = "gha-runner-ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = true, features = ["json"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

# Stout release binary for host install and the micro-agent image.
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
